Version 5053-1
 * Introduce Changelog
 * Bump pkgversion to 5052
 * Change pkgdescription a little
 * Dependencies:
   * Add lua, sdl, sdl_gfxm and python (buildtime dependency)
   * Add a comment about espeak which was used to generate the bot voice samples
 * Remove the icon from the tarball, instead download the icon from our buildbot website
 * Minor indent changes
Version 3146-1
 * Version by gwash