@@ -1,0 +1,30 @@
+# Maintainer: Chris Mann <chris@edgnett.com.au>
+pkgname=arename-git
+pkgver=20111105
+pkgrel=2
+pkgdesc="Automatically rename audio files by tagging information"
+url="http://ft.bewatermyfriend.org/comp/arename.html"
+arch=('any')
+license=('GPL')
+depends=('perl' 'perl-readonly' 'perl-audio-scan')
+makedepends=('git')
+
+_gitroot="https://github.com/ft"
+_gitname="arename"
+
+build() {
+  cd "${startdir}/src"
+
+  if [ -d "${_gitname}/.git" ]; then
+    cd "${_gitname}"
+    make clean
+    git pull
+  else
+    git clone "${_gitroot}/${_gitname}.git"
+    cd "${_gitname}"
+  fi
+
+  make genperlscripts && make doc || return 1
+  mkdir "${startdir}/pkg/usr"
+  make prefix="${startdir}/pkg/usr" libpath="lib/perl5/site_perl" install install-doc || return 1
+}
