@@ -35,7 +35,10 @@ build() {
   cp -r ${_bzrmod} ${_bzrmod}-build
   cd ${_bzrmod}-build
 
-  grep -lr sqlheavy-0.1 * | xargs sed -i 's|sqlheavy-0.1|sqlheavy-0.2|'
+  sed -i 's|sqlheavy-0.1|sqlheavy-0.2|' \
+	data/Makefile \
+	images/Makefile \
+	src/CMakeLists.txt
 
   mkdir build; cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr
@@ -45,5 +48,4 @@ build() {
 package() {
   cd "${srcdir}"/${_bzrmod}-build/build
   make DESTDIR="${pkgdir}" install
-  rm -rf "${srcdir}"/${_bzrmod}-build
 }
