@@ -1,7 +1,7 @@
-# Contributor: M Rawash <mrawash@gmail.com>
-# Maintainer: matthiaskrgr <matthiaskrgr@freedroid.org>
+# Contributor: M Rawash <mrawash _stange_curved_character_ gmail D0T com>
+# Maintainer: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 pkgname=freedroidrpg-svn
-pkgver=5053
+pkgver=5118
 pkgrel=1
 pkgdesc="A science fiction role playing game which tells the story of a world destroyed by a conflict between robots and their human masters - development version"
 url="http://www.freedroid.org"
@@ -14,11 +14,11 @@ conflicts=('freedroidrpg')
 replaces=('freedroidrpg')
 changelog=('changelog')
 source=("http://buildbot.freedroid.org/logo.png"
-		"freedroidrpg.desktop"
-		"changelog")
+        "freedroidrpg.desktop"
+        "changelog")
 sha1sums=('4a9b3ffadae7367c0f30025370cb7d27ba38fcc1'
-		 '463708161658e15aa555de14ef18ea1fcc0a2758'
-		 '607b1e64ba2195b57982dbaa4ba1f4d7ca3dbcae')
+          '463708161658e15aa555de14ef18ea1fcc0a2758'
+          '7632611f71b8d1f8b50c4de181d168c2987e548e')
 
 _svntrunk=https://freedroid.svn.sourceforge.net/svnroot/freedroid
 _svnmod=freedroid
@@ -41,10 +41,15 @@ build() {
 	cp -r "$srcdir/$_svnmod" "$srcdir/$_svnmod-build"
 	cd "$srcdir/$_svnmod-build"
 
+	msg "Running autogen.sh..."
 	./autogen.sh
+	msg "Running configure..."
 	./configure --prefix=/usr
+	msg "Compiling..."
 	make || return 1
+	msg "Compiling and installing to pkgdir this time..."
 	make DESTDIR=$pkgdir install || return 1
+	msg "Compiling done."
 
 	install -Dm644 $srcdir/logo.png $pkgdir/usr/share/pixmaps/freedroidrpg.png
 	install -Dm644 $srcdir/freedroidrpg.desktop $pkgdir/usr/share/applications/freedroidrpg.desktop
