@@ -5,22 +5,21 @@
 
 pkgname=nant
 pkgver=0.91
-pkgrel=3
+pkgrel=4
 pkgdesc="A free .NET build tool, like make but without make's problems"
 arch=('i686' 'x86_64')
 url="http://nant.sourceforge.net"
 license="GPL"
 depends=('mono')
 makedepends=('pkgconfig')
-source=("http://downloads.sourceforge.net/nant/$pkgname-$pkgver-alpha2-bin.tar.gz")
-md5sums=('35e8b7bdc9dd3e35dfc8b6838242d524')
+source=("http://downloads.sourceforge.net/nant/$pkgname-$pkgver-bin.tar.gz")
+md5sums=('669eddcd12f15a2b5a525b1d757a3ae4')
 build() {
   export MONO_SHARED_DIR=$srcdir/.wabi
   mkdir -p "${MONO_SHARED_DIR}"
   mkdir $pkgdir/usr $pkgdir/usr/share $pkgdir/usr/share/NAnt $pkgdir/usr/bin
 
-  cp -R $srcdir/$pkgname-$pkgver-alpha2/* $pkgdir/usr/share/NAnt/
+  cp -R $srcdir/$pkgname-$pkgver/* $pkgdir/usr/share/NAnt/
   echo '/usr/bin/mono /usr/share/NAnt/bin/NAnt.exe "$@"' > $pkgdir/usr/bin/nant
   chmod +x $pkgdir/usr/bin/nant
 }
-
