@@ -1,6 +1,6 @@
 # Maintainer: Diego José <diegoxter1006@gmail.com>
 pkgname=tyrs-git
-pkgver=20110819
+pkgver=20111105
 pkgrel=1
 pkgdesc="Tyrs is a twitter and identi.ca client based on curse."
 arch=('any')
