@@ -1,3 +1,8 @@
+Version 5118-1
+ * Make the e-mail addresses harder to read for machines
+ * Bump pkgversion to 5118
+ * Change some indentation
+ * Print some more output when compiling
 Version 5053-1
  * Introduce Changelog
  * Bump pkgversion to 5052
